--- a/index.html
+++ b/index.html
@@ -102,19 +102,23 @@
 
     <section class="promo promo-house">
       <div class="container">
-        <h3>Spain</h3>
-        <h2>Grand Spain Madrid</h2>
-        <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account born and I account will give you a complete account of the system</p>
-        <button>book now</button>
+        <div class="content">
+          <h3>Spain</h3>
+          <h2>Grand Spain Madrid</h2>
+          <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account born and I account will give you a complete account of the system</p>
+          <button>book now</button>
+        </div>
       </div>
     </section>
 
     <section class="promo promo-sea">
       <div class="container">
-        <h3>Spain</h3>
-        <h2>Grand Spain Madrid</h2>
-        <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account born and I account will give you a complete account of the system</p>
-        <button>book now</button>
+        <div class="content">
+          <h3>Spain</h3>
+          <h2>Grand Spain Madrid</h2>
+          <p>But I must explain to you how all this mistaken idea of account to denouncing pleasure and praising pain was account born and I account will give you a complete account of the system</p>
+          <button>book now</button>
+        </div>
       </div>
     </section>
 
