--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
 
           <form id="search-form">
             <input type="search" placeholder="Search Your Travel Destination">
-            <button>Search</button>
+            <button>
+              <img src="images/vector/search.svg" alt="magnifying glass">
+              <span>Search</span>
+            </button>
           </form>
 
-          <button>Scroll Down</button>
+          <button>
+            <span>Scroll Down</span>
+            <img src="images/vector/chevron.svg" alt="down arrow">
+          </button>
         </div>
       </div>
     </div>
@@ -82,7 +88,7 @@
         <div class="row">
           <ul class="features">
             <li>
-              <img src="images/vector/search.svg" alt="magnifying glass">
+              <img src="images/vector/magnifier.svg" alt="magnifying glass">
               <span>Search Places</span>
             </li>
 
