--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
 
   <main>
     <section class="hero">
-      <div class="container">
-        <div class="row">
+      <div class="row">
+        <div class="container">
           <div class="column text">
             <h2>Why Choose Us</h2>
 
@@ -84,8 +84,10 @@
             <img src="images/Image 2.png" alt="mountain view">
           </div>
         </div>
+      </div>
 
-        <div class="row">
+      <div class="row">
+        <div class="container">
           <ul class="features">
             <li>
               <img src="images/vector/magnifier.svg" alt="magnifying glass">
@@ -103,6 +105,7 @@
             </li>
           </ul>
         </div>
+      </div>
       </div>
     </section>
 
