--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </button>
           </form>
 
-          <button>
+          <button onclick="location.href='#nav'">
             <span>Scroll Down</span>
             <img src="images/vector/chevron.svg" alt="down arrow">
           </button>
@@ -42,23 +42,23 @@
 
     <div class="wrapper">
       <div class="container">
-        <nav>
+        <nav id="nav">
           <a href="/" class="logo">
             <h2>Bhromaon</h2>
           </a>
 
           <menu>
             <li>
-              <a href="">Who We Are</a>
+              <a href="#features">Who We Are</a>
             </li>
             <li>
-              <a href="">What We Do</a>
+              <a href="#house">What We Do</a>
             </li>
             <li>
-              <a href="">Travel With Us</a>
+              <a href="#spain">Travel With Us</a>
             </li>
             <li>
-              <a href="">Contact Us</a>
+              <a href="#footer">Contact Us</a>
             </li>
           </menu>
         </nav>
@@ -88,7 +88,7 @@
 
       <div class="row">
         <div class="container">
-          <ul class="features">
+          <ul class="features" id="features">
             <li>
               <img src="images/vector/magnifier.svg" alt="magnifying glass">
               <span>Search Places</span>
@@ -109,7 +109,7 @@
       </div>
     </section>
 
-    <section class="promo promo-house">
+    <section class="promo promo-house" id="house">
       <div class="container">
         <div class="content">
           <h3>Spain</h3>
@@ -120,7 +120,7 @@
       </div>
     </section>
 
-    <section class="promo promo-sea">
+    <section class="promo promo-sea" id="spain">
       <div class="container">
         <div class="content">
           <h3>Spain</h3>
@@ -149,7 +149,7 @@
     </section>
   </main>
 
-  <footer>
+  <footer id="footer">
     <h2>Bhromaon</h2>
     <h3>Safe Travel Anywhere</h3>
 
